tests/baselines/reference/blockScopedFunctionDeclarationStrictES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
blockScopedFunctionDeclarationStrictES5.ts(3,14): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
blockScopedFunctionDeclarationStrictES5.ts(6,1): error TS2304: Cannot find name 'foo'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== blockScopedFunctionDeclarationStrictES5.ts (2 errors) ====
    "use strict";
    if (true) {
        function foo() { } // Error to declare function in block scope
                 ~~~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        foo(); // This call should be ok
    }
    foo(); // Error to find name foo
    ~~~
!!! error TS2304: Cannot find name 'foo'.